--- a/ACM_muban.tex
+++ b/ACM_muban.tex
@@ -758,6 +758,31 @@ LL qpolysum(LL R, LL n, LL *a, LL m) { /// a[0].. a[m] \sum_{i=0}^{n-1} a[i]*R^i
 }
 \end{lstlisting}
 \section{数据结构}
+\subsection{ST表求RMQ}
+$O(nlog_n)$预处理，$O(1)$查询
+\begin{lstlisting}
+#define log(x) (31-__builtin_clz(x))
+const int MAXN = 1e5+10;
+const int LOGN = log(MAXN)/log(2)+5;
+int M[MAXN][LOGN]; 
+int a[MAXN];
+int z,m,n;
+void init(){//初始化，复杂度O(nlogn) 
+	for(int i=1;i<=n;i++) M[i][0]=i;//长度为1的区间最值是自己 
+	for(int j=1;j<=LOGN;j++){
+		for(int i=1;i<=n-(1<<j)+1;i++){
+			if(a[M[i][j-1]]<a[M[i+(1<<(j-1))][j-1]]) M[i][j] = M[i][j-1];//这里以最小值为例 
+			else M[i][j] = M[i+(1<<j-1)][j-1];
+		}
+	} 
+}
+int query(int l,int r){
+	int k = log(r-l+1)/log(2);//向下取整
+	if(a[M[l][k]]<a[M[r-(1<<k)+1][k]]) return M[l][k];
+	else return M[r-(1<<k)+1][k];
+}
+\end{lstlisting}
+
 \subsection{并查集系列}
 \subsubsection{普通并查集}
 带路径压缩,$O(1)$复杂度
@@ -1257,35 +1282,6 @@ int main(){
 \end{lstlisting}
 
 \section{其他}
-
-\subsection{ST表求RMQ}
-$O(nlog_n)$预处理，$O(1)$查询
-\begin{lstlisting}
-#define log(x) (31-__builtin_clz(x))//谢谢hjt
-const int MAXN = 1e5+10;
-const int LOGN = log(MAXN)/log(2)+5;//这里要开大一点,之前因为没开大翻车了 
-
-int M[MAXN][LOGN]; 
-int a[MAXN];
-int z,m,n;
-
-void init(){//初始化，复杂度O(nlogn) 
-	for(int i=1;i<=n;i++) M[i][0]=i;//长度为1的区间最值是自己 
-	for(int j=1;j<=LOGN;j++){
-		for(int i=1;i<=n-(1<<j)+1;i++){
-			if(a[M[i][j-1]]<a[M[i+(1<<(j-1))][j-1]]) M[i][j] = M[i][j-1];//这里以最小值为例 
-			else M[i][j] = M[i+(1<<j-1)][j-1];
-		}
-	} 
-}
-
-int query(int l,int r){
-	int k = log(r-l+1)/log(2);//向下取整
-	if(a[M[l][k]]<a[M[r-(1<<k)+1][k]]) return M[l][k];
-	else return M[r-(1<<k)+1][k];
-}
-\end{lstlisting}
-
 \subsection{莫队}
 \begin{lstlisting}
 int cnt[MAXN];//记录数字在区间[l,r]内出现的次数
